[gd_scene load_steps=3 format=3 uid="uid://ntlv5pjkxrcf"]

[ext_resource type="Theme" uid="uid://bqgh0gqsqdd5w" path="res://resources/theme/quiz_card_theme.tres" id="1_ofx1w"]
[ext_resource type="Script" path="res://scripts/quiz_card.gd" id="1_qjaar"]

[node name="QuizCard" type="Button"]
custom_minimum_size = Vector2(200, 300)
offset_left = 229.0
offset_top = 86.0
offset_right = 436.0
offset_bottom = 448.0
theme = ExtResource("1_ofx1w")
script = ExtResource("1_qjaar")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -141.5
offset_right = 87.5
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Nome"
horizontal_alignment = 1

[node name="ThemeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tema"

[node name="ImageRect" type="TextureRect" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pontuação: 0"

[node name="QuestionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Questões: 0"

[connection signal="pressed" from="." to="." method="_on_pressed"]
